# packaging_example

./: setup.cfg  setup.py
src/example_pkg_wangzhefeng.egg-info/: PKG-INFO  SOURCES.txt
