[metadata]
name = example-pkg-wangzhefeng
version = 0.0.1
author = wangzhefeng
author_email = wangzhefengr@163.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/wangzhefeng/example-pkg-wangzhefeng
project_urls =
    Bug Tracker = https://github.com/wangzhefeng/example-pkg-wangzhefeng/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src